# terrafomo

./: .ghci  .gitignore  .gitlab-ci.yml  .projectile  .stylish-haskell.yaml  .travis.yml  Makefile  README.md  Terraform.AWS.Resources.hs  cabal.config  cabal.project  clone  generate-resources  shell.nix  stack-8.2.yaml  stack-8.4.3.yaml  stack.yaml  terrorform.cabal
language-hcl/: language-hcl.cabal
language-hcl/src/HCL/: Syntax.hs
language-hcl/src/Language/: HCL.hs
provider/terrafomo-aws/: package.yaml  terrafomo-aws.cabal
provider/terrafomo-azurerm/: package.yaml  terrafomo-azurerm.cabal
provider/terrafomo-builtins/: package.yaml  terrafomo-builtins.cabal
provider/terrafomo-cobbler/: package.yaml  terrafomo-cobbler.cabal
provider/terrafomo-digitalocean/: package.yaml  terrafomo-digitalocean.cabal
provider/terrafomo-rancher/: package.yaml  terrafomo-rancher.cabal
provider/terrafomo-scaleway/: package.yaml  terrafomo-scaleway.cabal
terrafomo/: package.yaml  terrafomo.cabal
terrafomo-cli/: terrafomo-cli.cabal
terrafomo-cli/src/Terrafomo/: CLI.hs
terrafomo-example/: terrafomo-example.cabal
terrafomo-example/app/: Main.hs
terrafomo-example/src/Example/: Config.hs  Network.hs
terrafomo-gen/: package.yaml  terrafomo-gen.cabal
terrafomo-gen/config/: alicloud.yaml  archive.yaml  arukas.yaml  aws.yaml  azurerm.yaml  bitbucket.yaml  chef.yaml  circonus.yaml  clc.yaml  cloudflare.yaml  cloudstack.yaml  cobbler.yaml  consul.yaml  datadog.yaml  digitalocean.yaml  dme.yaml  dns.yaml  dnsimple.yaml  docker.yaml  dyn.yaml  external.yaml  fastly.yaml  github.yaml  gitlab.yaml  google.yaml  grafana.yaml  heroku.yaml  http.yaml  icinga2.yaml  ignition.yaml  influxdb.yaml  kubernetes.yaml  librato.yaml  local.yaml  logentries.yaml  logicmonitor.yaml  mailgun.yaml  mysql.yaml  newrelic.yaml  nomad.yaml  (+27 more)
terrafomo-gen/ir/: alicloud.json  archive.json  aws.json  azurerm.json  bitbucket.json  chef.json  circonus.json  clc.json  cloudflare.json  cloudstack.json  cobbler.json  consul.json  datadog.json  digitalocean.json  dme.json  dnsimple.json  docker.json  dyn.json  external.json  fastly.json  github.json  gitlab.json  google.json  grafana.json  heroku.json  http.json  icinga2.json  ignition.json  influxdb.json  kubernetes.json  librato.json  local.json  logentries.json  logicmonitor.json  mailgun.json  mysql.json  newrelic.json  nomad.json  ns1.json  oneandone.json  (+24 more)
terrafomo-gen/model/: alicloud.json  archive.json  aws.json  azurerm.json  bitbucket.json  chef.json  circonus.json  clc.json  cloudflare.json  cloudstack.json  cobbler.json  consul.json  datadog.json  digitalocean.json  dme.json  dnsimple.json  docker.json  dyn.json  external.json  fastly.json  github.json  gitlab.json  google.json  grafana.json  heroku.json  http.json  icinga2.json  ignition.json  influxdb.json  kubernetes.json  librato.json  local.json  logentries.json  logicmonitor.json  mailgun.json  mysql.json  newrelic.json  nomad.json  ns1.json  oneandone.json  (+24 more)
terrafomo-gen/schema/: alicloud.yaml  arukas.yaml  aws.yaml  azure.yaml  azurerm.yaml  bitbucket.yaml  chef.yaml  circonus.yaml  clc.yaml  cloudflare.yaml  cloudstack.yaml  cobbler.yaml  consul.yaml  datadog.yaml  digitalocean.yaml  dme.yaml  dnsimple.yaml  docker.yaml  dyn.yaml  fastly.yaml  github.yaml  gitlab.yaml  google.yaml  grafana.yaml  heroku.yaml  icinga2.yaml  ignition.yaml  influxdb.yaml  kubernetes.yaml  librato.yaml  logentries.yaml  logicmonitor.yaml  mailgun.yaml  mysql.yaml  newrelic.yaml  nomad.yaml  ns1.yaml  oneandone.yaml  opc.yaml  openstack.yaml  (+19 more)
terrafomo-gen/schema/alicloud/: disk_attachment.yaml  forward.yaml  instance_types.yaml  nat_gateway.yaml  regions.yaml  router_interface.yaml  security_group.yaml  security_group_rule.yaml  slb.yaml  vpc.yaml  vroute_entry.yaml  vswitch.yaml
terrafomo-gen/schema/archive/: archive_file.yaml
terrafomo-gen/schema/arukas/: container.yaml
terrafomo-gen/schema/aws/: acm_certificate.yaml  ami.yaml  ami_copy.yaml  ami_from_instance.yaml  ami_ids.yaml  api_gateway_account.yaml  api_gateway_authorizer.yaml  api_gateway_base_path_mapping.yaml  api_gateway_deployment.yaml  api_gateway_gateway_response.yaml  api_gateway_integration.yaml  api_gateway_integration_response.yaml  api_gateway_method.yaml  api_gateway_method_response.yaml  api_gateway_method_settings.yaml  api_gateway_resource.yaml  api_gateway_rest_api.yaml  api_gateway_stage.yaml  api_gateway_usage_plan_key.yaml  app_cookie_stickiness_policy.yaml  appautoscaling_policy.yaml  autoscaling_group.yaml  autoscaling_groups.yaml  autoscaling_lifecycle_hooks.yaml  autoscaling_notification.yaml  autoscaling_schedule.yaml  availability_zone.yaml  availability_zones.yaml  batch_job_queue.yaml  billing_service_account.yaml  caller_identity.yaml  canonical_user_id.yaml  cloudformation_stack.yaml  cloudfront_distribution.yaml  cloudtrail.yaml  cloudtrail_service_account.yaml  cloudwatch_dashboard.yaml  cloudwatch_event_rule.yaml  cloudwatch_log_destination.yaml  cloudwatch_log_destination_policy.yaml  (+191 more)
terrafomo-gen/schema/azure/: affinity_group.yaml  data_disk.yaml  dns_server.yaml  instance.yaml  local_network_connection.yaml  security_group.yaml  security_group_rule.yaml  sql_database_server.yaml  sql_database_service.yaml  storage_blob.yaml  storage_container.yaml  storage_queue.yaml
terrafomo-gen/schema/azurerm/: app_service.yaml  application_gateway.yaml  application_insights.yaml  automation_account.yaml  automation_credential.yaml  automation_runbook.yaml  availability_set.yaml  dns_cname_record.yaml  dns_ns_record.yaml  dns_srv_record.yaml  (+38 more)
terrafomo-gen/src/: .#Main.hs  Main.hs
terrafomo-gen/template/: cabal.ede  contents.ede  datasource.ede  lens.ede  lenses.ede  main.ede  package.ede  prelude.ede  primitives.ede  provider.ede  resource.ede  schema.ede  settings.ede  types.ede
terrafomo/src/: Terrafomo.hs
terrafomo/test/: EncodeTest.hs  HCLSpec.hs
terraform/: terraform.cabal
terraform-gen/: terraform-gen.cabal
terraform-gen/src/: Main.hs
terraform/script/: .#generate-aws-provider  generate-aws-provider
(+2484 files in other folders)
