cabal-version:  2.2
name:           terrafomo-cli
category:       Language, Console
version:        0.1.0.0
license:        MPL-2.0
author:         Brendan Hay
maintainer:     Brendan Hay <brendan.g.hay+terrafomo@gmail.com>
stability:      provisional
homepage:       https://github.com/brendanhay/terrafomo
bug-reports:    https://github.com/brendanhay/terrafomo/issues
copyright:      Copyright (c) 2017-2018 Brendan Hay
build-type:     Simple
synopsis:       Pending
description:    Pending

data-files:
    test/fixtures/*.tf

source-repository head
    type: git
    location: https://github.com/brendanhay/terrafomo
    subdir: terrafomo-cli

common base
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.10 && < 5
    default-extensions:
        BangPatterns
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DuplicateRecordFields
        ExplicitNamespaces
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MagicHash
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

library
    import: base
    hs-source-dirs: src
    build-depends:
        data-fix,
        directory,
        filepath,
        mtl,
        optparse-applicative,
        process,
        terrafomo,
        text
    exposed-modules:
        Terrafomo.CLI
        Terrafomo.CLI.Command
        Terrafomo.CLI.IO
        Terrafomo.CLI.Options
        Terrafomo.CLI.Path
    reexported-modules:
        terrafomo:Terrafomo,
        terrafomo:Terrafomo.Lens.Labels