name:                  terrafomo-gen
version:               0.1.0.0
synopsis:              Pending.
homepage:              https://github.com/brendanhay/terrafomo
bug-reports:           https://github.com/brendanhay/terrafomo/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2017 Brendan Hay
category:              Configuration
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/terrafomo.git

executable terrafomo-gen
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          Main.hs

    ghc-options:      -Wall -Wincomplete-uni-patterns

    other-modules:
        Terrafomo.Gen.Example
        Terrafomo.Gen.JSON
        Terrafomo.Gen.Markdown
        Terrafomo.Gen.Parser
        Terrafomo.Gen.Provider
        Terrafomo.Gen.Schema
        Terrafomo.Gen.Template
        Terrafomo.Gen.Text

    build-depends:
          aeson
        , base       >= 4.9 && < 5
        , cmark
        , containers
        , directory
        , ede
        , errors
        , filepath
        , megaparsec >= 6.2
        , optparse-applicative
        , pretty-show
        , process
        , terrafomo
        , text
        , wl-pprint-text
        , yaml