name:                  terrafomo
version:               0.0.0.0
synopsis:              Pending.
homepage:              https://github.com/brendanhay/terrafomo
bug-reports:           https://github.com/brendanhay/terrafomo/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2017 Brendan Hay
category:              Configuration
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/terrafomo.git

library
    default-language: Haskell2010
    hs-source-dirs:   src

    ghc-options:      -Wall -Wincomplete-uni-patterns

    exposed-modules:
        Terrafomo.Format
        Terrafomo.Hash
        Terrafomo.Monad
        Terrafomo.Prelude
        Terrafomo.Syntax.Attribute
        Terrafomo.Syntax.HCL
        Terrafomo.Syntax.Name
        Terrafomo.Syntax.Output
        Terrafomo.Syntax.Resource
        Terrafomo.Syntax.Serialize
        Terrafomo.Syntax.TH
        Terrafomo.Syntax.Parser
        Terrafomo.Tutorial

    build-depends:
          aeson
        , base       >= 4.9 && < 5
        , containers
        , formatting
        , hashable
        , lens
        , megaparsec >= 6.2
        , mtl
        , random
        , template-haskell
        , text
        , unordered-containers
        , wl-pprint-text