cabal-version:  2.2
name:           terrafomo
category:       Language, Cloud
version:        0.1.0.0
license:        MPL-2.0
author:         Brendan Hay
maintainer:     Brendan Hay <brendan.g.hay+terrafomo@gmail.com>
stability:      provisional
homepage:       https://github.com/brendanhay/terrafomo
bug-reports:    https://github.com/brendanhay/terrafomo/issues
copyright:      Copyright (c) 2017-2018 Brendan Hay
build-type:     Simple
synopsis:       Pending
description:    Pending

data-files:
    test/fixtures/*.tf

source-repository head
    type: git
    location: https://github.com/brendanhay/terrafomo
    subdir: terrafomo

common base
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.10 && < 5
    default-extensions:
        BangPatterns
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DuplicateRecordFields
        ExplicitNamespaces
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MagicHash
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

library
    import: base
    hs-source-dirs: src
    build-depends:
        aeson,
        bytestring,
        containers,
        mtl,
        scientific,
        text,
    exposed-modules:
        Terrafomo
        Terrafomo.Document
        Terrafomo.Encode
        Terrafomo.Fix
        Terrafomo.HCL
        Terrafomo.HIL
        Terrafomo.Lens
        Terrafomo.Lens.Labels
        Terrafomo.Plan
        Terrafomo.Pretty
        Terrafomo.Schema
        Terrafomo.State

test-suite tests
    import: base
    ghc-options: -threaded
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-tool-depends: tasty-discover:tasty-discover >= 3.0 && < 4.3
    build-depends:
        QuickCheck,
        amazonka-iam-policy,
        bytestring,
        containers,
        filepath,
        microlens,
        process,
        tasty        >= 0.11,
        tasty-golden >= 2.3,
        tasty-hunit  >= 0.9,
        tasty-quickcheck,
        terrafomo,
        text,
    other-modules:
        EncodeTest
        Paths_terrafomo
