name:                  terraform-gen
version:               0.1.0.0
synopsis:              Pending.
homepage:              https://github.com/brendanhay/terraform
bug-reports:           https://github.com/brendanhay/terraform/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2017 Brendan Hay
category:              Configuration
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/terraform.git

executable terraform-gen
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          Main.hs

    ghc-options:      -Wall -Wincomplete-uni-patterns

    build-depends:
          aeson
        , base       >= 4.9 && < 5
        , cmark
        , containers
        , directory
        , filepath
        , megaparsec >= 6.2
        , optparse-applicative
        , pretty-show
        , text
        , yaml
        , ede