cabal-version:  2.2
name:           terrafomo-azurerm
category:       Language, Cloud
version:        0.2.15.0
license:        MPL-2.0
author:         Brendan Hay
maintainer:     Brendan Hay <brendan.g.hay+terrafomo@gmail.com>
stability:      provisional
homepage:       https://github.com/brendanhay/terrafomo
bug-reports:    https://github.com/brendanhay/terrafomo/issues
copyright:      Copyright (c) 2017-2018 Brendan Hay
build-type:     Simple
synopsis:       Pending - azurerm - 1.15.0
description:    Pending

source-repository head
    type: git
    location: https://github.com/brendanhay/terrafomo
    subdir: provider/terrafomo-azurerm

library
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    default-extensions:
        BangPatterns
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DuplicateRecordFields
        ExplicitNamespaces
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MagicHash
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns
    hs-source-dirs: src gen
    exposed-modules:
        Terrafomo.AzureRM
        Terrafomo.AzureRM.DataSources
        Terrafomo.AzureRM.Provider
        Terrafomo.AzureRM.Resources
        Terrafomo.AzureRM.Settings
        Terrafomo.AzureRM.Types
    other-modules:
        Terrafomo.AzureRM.Resources01
        Terrafomo.AzureRM.Resources02
        Terrafomo.AzureRM.Settings01
        Terrafomo.AzureRM.Settings02
    reexported-modules:
        terrafomo:Terrafomo, terrafomo:Terrafomo.Lens.Labels
    build-depends:
        base >= 4.10 && < 5,
        containers,
        terrafomo ^>= 0.1.0.0,
        text
