cabal-version:  2.2
name:           terrafomo-cobbler
category:       Language, Cloud
version:        0.2.0.1
license:        MPL-2.0
author:         Brendan Hay
maintainer:     Brendan Hay <brendan.g.hay+terrafomo@gmail.com>
stability:      provisional
homepage:       https://github.com/brendanhay/terrafomo
bug-reports:    https://github.com/brendanhay/terrafomo/issues
copyright:      Copyright (c) 2017-2018 Brendan Hay
build-type:     Simple
synopsis:       Pending - cobbler - 1.0.1
description:    Pending

source-repository head
    type: git
    location: https://github.com/brendanhay/terrafomo
    subdir: provider/terrafomo-cobbler

library
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    default-extensions:
        BangPatterns
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DuplicateRecordFields
        ExplicitNamespaces
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MagicHash
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns
    hs-source-dirs: src gen
    exposed-modules:
        Terrafomo.Cobbler
        Terrafomo.Cobbler.Provider
        Terrafomo.Cobbler.Resources
        Terrafomo.Cobbler.Settings
        Terrafomo.Cobbler.Types
    other-modules:
    reexported-modules:
        terrafomo:Terrafomo, terrafomo:Terrafomo.Lens.Labels
    build-depends:
        base >= 4.10 && < 5,
        containers,
        terrafomo ^>= 0.1.0.0,
        text
